test/compile_errors/err_move_not_closure.w
//! expect-check-fail: 'move' must be followed by a closure
fn main:
    let x = move 42
